second try to fix the scrollbar on ios

--- a/nuxt_frontend/assets/general.sass
+++ b/nuxt_frontend/assets/general.sass
@@ -25,7 +25,8 @@ html
   color: $pax-white
 
 ::-webkit-scrollbar
-  -webkit-appearance: none
+  width: 0
+  background-color: #e9e9e9
 
 ::-webkit-scrollbar-thumb
   background: #333
